# financial-statements

./: .env.sample  .gitignore  README.md  gsheet-formulas-requirements.txt  pyproject.toml  requirements.txt
.github/agents/: account-close-runtime.agent.md  aws-storage-adapter.agent.md  backend-api.agent.md  bill-shared-runtime.agent.md  code-complete.agent.md  design.agent.md  financial-accounting.agent.md  gas-ui.agent.md  google-sheets-adapter.agent.md  homebudget-adapter.agent.md  learning.agent.md  mapping-crud.agent.md  product-manager.agent.md  python-data.agent.md  reconciliation-engine.agent.md  source-adapters.agent.md  sqlite-adapter.agent.md  statement-builder.agent.md  test.agent.md  workflow-orchestrator.agent.md
.github/hooks/: preapprove-powershell.ps1
.github/hooks-sandbox/: preapprove-powershell.json
.github/prompts/: design.prompt.md  gsheet-formulas.prompt.md  helper-workbooks-design.prompt.md  plan-closing-design.prompt.md  plan-closing-tdd-implementation.prompt.md  plan-design.prompt.md  reconcile-gap.prompt.md  requirements.prompt.md
.scripts/bash/: setup.sh
.scripts/cmd/: hb_txns_batch.bat
docs/: about.md  account-classification.md  accounting-logic.md  bill-payment.md  cash-reconcile.md  data-source-inventory.md  dependencies.md  financial-statements-spec.md  glossary.md  google-sheets.md  homebudget.md  mvp-design.md  navigation.md  requirements.md
gsheet/: cash-expenses.json  closing-session.json  cpf.json  financial-statements.json  gsheet_config.json  homebudget_mapping.json  ibkr-iba.json  shared-expenses.json
(+174 files in other folders)
